# CalBarExamPractice

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  start.sh
app/: __init__.py
app/cli/: __init__.py  __main__.py  main.py
app/config/: settings.py
app/db/: __init__.py  session.py
app/db/migrations/: env.py
app/ingestion/: __init__.py
app/parsing/: __init__.py  text.py
app/schemas/: __init__.py  calbar.py  essays.py  pdf.py  rules.py  submissions.py
app/services/: analysis.py  export.py  files.py  html_export.py  question_context_cache.py  question_subject_mapper.py  rule_retriever.py
app/validation/: __init__.py  reports.py
app/web/: __init__.py  app.py
data/parsed/: CBXFeb2012_SelectedAnswers_R.essays.json  CBXFeb2017_Selected_EssayQuestions1-6_R.essays.json  CBXJuly2012_Selected_Answers_Essays_R.essays.json  Essay-Questions-and-Answers.essays.json  Evidence.rules.json  Feb2015_CBXSelectedAnswers_EssayQuestions1-6_R.essays.json  Feb2018_CBXSelectedAnswers.essays.json  Feb2018_CBXSelectedAnswers_EssayQuestions.essays.json  Feb2019_CBX_SelectedAnswers.EssayQuestions_R.essays.json  Feb2023-CBX-Questions.essays.json  Feb2024-CBX-Questions.essays.json  Feb2025-CBX-Questions.essays.json  Feb2025-CBX-Retest-Questions.essays.json  Feb2026-CBX-Questions.essays.json  February-2013-CBX-Questions_R.essays.json  February-2013-CBX-Selected-Answers-Essays.essays.json  February-2020-Essay-Selected-Answers.essays.json  February-2021-CBX-Essay-Qs-and-Selected-Answers.essays.json  February-2022-CBX-Essay-Qs-and-Selected-Answers.essays.json  (+63 more)
(+80 files in other folders)
