[project]
name = "calbar-exam-tutor"
version = "0.1.0"
description = "CLI-first ingestion and parsing pipeline for California Bar exam materials."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "beautifulsoup4>=4.12",
  "fastapi>=0.115",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "jinja2>=3.1",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "pymupdf>=1.24",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "tenacity>=8.3",
  "typer>=0.12",
  "uvicorn[standard]>=0.30",
  "rank_bm25>=0.2",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unreachable = true
exclude = ["app/db/migrations"]

[[tool.mypy.overrides]]
module = ["fitz"]
ignore_missing_imports = true
